appling searching by text and filed search.
