# swagger File.yaml
@@ -136,7 +136,7 @@ paths:
       - "application/json"
       parameters: [
           {
-            "name": "authorizations",
+            "name": "Authorization",
             "in": "header",
             "description": "JWT access token",
             "required": true,
@@ -194,7 +194,7 @@ paths:
       - "application/json"
       parameters: [
           {
-            "name": "authorizations",
+            "name": "Authorization",
             "in": "header",
             "description": "JWT access token",
             "required": true,
@@ -253,7 +253,7 @@ paths:
       - "application/json"
       parameters: [
           {
-            "name": "authorizations",
+            "name": "Authorization",
             "in": "header",
             "description": "JWT access token",
             "required": true,
